added guild update endpoint
